--- a/popup.html
+++ b/popup.html
@@ -1,15 +1,82 @@
 <!DOCTYPE html>
 <html>
-  <head><title>PromptBell</title></head>
-  <body>
-    <label>Reminder message:</label><br>
-    <input type="text" id="message" /><br>
-    <label>In how many minutes?</label><br>
-    <input type="number" id="minutes" /><br><br>
-    <button id="setReminder">Set Reminder</button>
+<head>
+  <title>PromptBell</title>
+  <style>
+    body {
+      font-family: 'Segoe UI', sans-serif;
+      margin: 0;
+      padding: 15px;
+      width: 250px; /* Fixed width for consistent layout in popup */
+      background-color: #ffffff;
+      color: #000000;
+      border-radius: 16px;
+      transition: background-color 0.3s, color 0.3s;
+    }
 
-    <div id="status" style="margin-top: 10px; color: green; font-size: 0.9em;"></div>
+    input, button {
+      width: 100%;
+      padding: 8px;
+      margin-top: 5px;
+      box-sizing: border-box;
+      border: 1px solid #ccc;
+      border-radius: 4px;
+      font-size: 14px;
+    }
 
-    <script src="popup.js"></script>
-  </body>
+    button {
+      background-color: #007bff;
+      color: white;
+      border: none;
+      cursor: pointer;
+      margin-top: 10px;
+    }
+
+    button:hover {
+      background-color: #0056b3;
+    }
+
+    #status {
+      margin-top: 10px;
+      color: green;
+      font-size: 0.9em;
+    }
+
+    @media (prefers-color-scheme: dark) {
+      body {
+        background-color: #121212;
+        color: #e0e0e0;
+      }
+
+      input {
+        background-color: #1e1e1e;
+        color: #e0e0e0;
+        border: 1px solid #444;
+      }
+
+      button {
+        background-color: #3399ff;
+      }
+
+      button:hover {
+        background-color: #2277cc;
+      }
+
+      #status {
+        color: #80e27e;
+      }
+    }
+  </style>
+</head>
+<body>
+  <label for="message">Reminder message:</label><br>
+  <input type="text" id="message" /><br>
+  <label for="minutes">In how many minutes?</label><br>
+  <input type="number" id="minutes" /><br>
+  <button id="setReminder">Set Reminder</button>
+
+  <div id="status"></div>
+
+  <script src="popup.js"></script>
+</body>
 </html>
